# libtg2

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  config.h  config.h.in  configure.ac  libtg.h  test.c
crypto/: aes.c  cmn.c  cmn.h  cry.h  fact.h  hsh.c  hsh.h  rsa.c
essential/: CMakeLists.txt  alloc.h  array.h  base64.h  buf.c  buf.h  byteswap.h  deserialize.c  deserialize.h  endian.h  gunzip.c  gunzip.h  ld.h  log.h  serialize.c  serialize.h
essential/openssl/: configuration.h
libtg2.xcodeproj/: kuzmich.mode2  kuzmich.mode2v3  kuzmich.pbxuser  project.pbxproj
macos/: libcurlkuzm.dylib  strndup.c
mtx/: CMakeLists.txt  Makefile.am
mtx/include/: api.h  app.h  buf.h  cmn.h  crc.h  cry.h  enl.h  hdl.h  hsh.h  log.h  macro.h  net.h  scl.h  sel.h  setup.h  srl.h  tgt.h  tml.h  trl.h  types.h
mtx/src/: aes.c  api.c  app.c  buf.c  cmn.c  crc.c  cry.c  enl.c  fact.cpp  hdl.c  hsh.c  log.c  main.c  net.c  rfc.c  rsa.c  scl.c  sel.c  sha1.c  sha256.c  sil.c  srl.c  std.c  stk.c  tgt.c  tml.c  trl.c  types.c
support/: aes_ige.c
tg/: 2fa.c  2fa.h  CMakeLists.txt  Makefile.am  answer.c  answer.h  auth.c  auth.h  auth_key.c  auth_key.h  auth_key1.c  auth_key1.h  auth_key2.c  auth_key2.h  auth_key_mtx.c  auth_key_mtx.h  connect.c  dc.h  dialogs.c  errors.c  errors.h  images.c  images.h  messages.c  peer.c  peer.h  send_query.c  send_query.h  strerr.c  strerr.h  tg.c  tg.h  tg_log.h  updates.c  updates.h
tg/crypto/: aes.c  cmn.c  cmn.h  cry.h  fact.cpp  hsh.c  hsh.h  pbkdf2.c  pbkdf2.h  rnd.c  rsa.c  sha1.h  sha256.h
tg/database/: database.c  database.h
tg/mtproto/: ack.c  ack.h  encrypt.c  encrypt.h  header.c  header.h  mtproto.c  mtproto.h  transport.c  transport.h
tg/net/: net.c  net.h
tg/transport/: header.c  header.h  http.c  http.h  progress.h  socket.c  socket.h
tl/: CMakeLists.txt  Makefile.am
tl_generator/: .gitignore  CMakeLists.txt  Makefile.am  array.h  generator  generator.c  mtproto_api.tl  str.h  strndup.c  strtok_foreach.h  telegram_api.tl  tl_parser.c  tl_parser.h
